[package]
name = "lunco-modelica"
version = "0.1.0"
edition = "2021"
description = "Native Modelica simulation integration for LunCoSim using Rumoca"

[features]
# `lunco-api` is on by default so `cargo run --bin lunica --
# --api` Just Works for screenshot-driven debugging. Building without it
# (`cargo build --no-default-features`) drops the axum/tokio web stack,
# which matters for the wasm32 binary.
default = ["lunco-api"]
lunco-api = ["dep:lunco-api"]
# Opt-in Tracy profiler hook. Off by default because tracy-client-sys needs a
# C++ compile that breaks on wasm32 and on Windows MSVC 2019 (missing
# `RelationProcessorDie` enumerant in pre-2004 Win10 SDKs). Enable with
# `cargo run --features tracy --bin lunica` when you actually want a Tracy
# session.
tracy = ["bevy/trace_tracy"]

# Single source for desktop AND web. `scripts/build_web.sh build lunica`
# builds this bin with `--target wasm32` — the wasm-specific entry /
# window / worker wiring is gated behind `#[cfg(target_arch = "wasm32")]`
# inside `lunica.rs`, mirroring how `sandbox` unifies its desktop+web
# entry. No separate `_web` bin.
[[bin]]
name = "lunica"
path = "src/bin/lunica.rs"

# Off-thread Modelica worker — wasm32 only. Built as a second wasm bundle
# the main page launches via `new Worker()`. See
# `src/worker_transport.rs` for the JS bridge and
# `scripts/build_web.sh` for the second `wasm-bindgen --target web` pass.
[[bin]]
name = "lunica_worker"
path = "src/bin/lunica_worker.rs"

[[bin]]
name = "msl_indexer"
path = "src/bin/msl_indexer.rs"

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
# Phase-0 vello spike — see workspace dep for rationale.
bevy_vello.workspace = true
lunco-assets = { workspace = true }
lunco-core = { path = "../lunco-core" }
lunco-theme = { path = "../lunco-theme" }
lunco-doc = { path = "../lunco-doc" }
lunco-doc-bevy = { path = "../lunco-doc-bevy" }
lunco-twin-journal = { path = "../lunco-twin-journal" }
lunco-settings = { path = "../lunco-settings" }
lunco-workbench = { path = "../lunco-workbench" }
lunco-web = { workspace = true }
lunco-ui = { path = "../lunco-ui" }
lunco-viz = { path = "../lunco-viz" }
lunco-canvas = { path = "../lunco-canvas" }
lunco-twin = { path = "../lunco-twin", features = ["bevy"] }
lunco-workspace = { path = "../lunco-workspace" }
lunco-storage = { path = "../lunco-storage" }
egui_plot = { workspace = true }
# base64url encode/decode for shareable model links (see `model_share.rs`).
# Already resolved transitively (0.22.x) — no new download.
base64 = "0.22"
# Docs view (ModelViewMode::Docs): HTML → Markdown → egui render.
# `egui_commonmark` pulls the right `egui` version transitively to
# match bevy_egui 0.39 (→ egui 0.33). Syntax highlighting is enabled
# so `<pre><code>` blocks in Modelica docs render with colour.
egui_commonmark = { version = "0.22", features = ["better_syntax_highlighting"] }
# `all_loaders` wires up every shipped image source (file://, http://,
# bytes://, raw paths) so images in Documentation HTML render. We add
# a custom `modelica://` loader on top to resolve MSL-internal URIs
# against the on-disk MSL tree.
egui_extras = { version = "0.33", features = ["all_loaders"] }
# Pure-Rust HTML → Markdown converter. Used once per Documentation
# annotation to normalise into the shape commonmark expects.
htmd = "0.5"
# Lock-free publish path from the Modelica worker thread into the UI:
# each running sim owns an `Arc<ArcSwap<SimSnapshot>>` that the worker
# updates after every Step. Plots read via `load()` — no mutex, no
# per-sample work on the main thread. See `sim_stream.rs`.
arc-swap = "1"
# Polygon tessellator with EvenOdd fill-rule support — matches the
# de-facto Modelica standard (Qt's QPainterPath default that OMEdit
# and Dymola rely on). egui's built-in `Shape::convex_polygon` only
# triangulates convex shapes; concave or self-intersecting polygons
# (PartialValve's bowtie, sensor Y-marks, gauge X-shapes) need a real
# tessellator. lyon does this in pure Rust with vertex/index buffer
# output that drops straight into `egui::Mesh`. ~150 KB compiled.
lyon_tessellation = "1"
lyon_path = "1"
lyon_geom = "1"
# Direct rayon dependency so `lunica` can configure the
# global rayon pool BEFORE rumoca's `parse_files_parallel` initialises
# it with `num_cpus - 1` threads. With rumoca's default, every
# parse-on-Add saturates all-but-one core for ~1.5 s and starves
# bevy_render — the `Last` schedule blocks waiting for the previous
# frame's render. Capping rayon at 2 threads keeps cores free for
# rendering without losing meaningful parse speed (rumoca's parallel
# benefit is for batch parses, not the per-Add single-file path).
rayon = "1"
# Wasm-safe replacement for `std::time::Instant`. On native it's an alias
# for `std::time::Instant`; on wasm32 it's backed by `performance.now()`.
# Required because `std::time::Instant::now()` panics with
# "time not implemented on this platform" on wasm32-unknown-unknown.
web-time = { workspace = true }
# Pre-parsed MSL bundle deserialiser. Same encoding as rumoca's
# on-disk artifact cache — the wasm fetcher decodes a Vec of
# (uri, StoredDefinition) shipped at build time, skipping a ~27-min
# per-file parse on the page.
bincode = "1.3"
# Compile-time embedding of the `assets/models/` tree so
# `src/models.rs` can enumerate bundled `.mo` examples by walking a
# static `Dir`, instead of requiring a `pub const + include_str!` line
# per file. Same API works on wasm32 (where fs access is unavailable).
include_dir = "0.7"
# Raster decoders used by egui_extras' `all_loaders`. Only the formats
# actually present in MSL Resources/Images are enabled to keep the
# compile surface small.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# LunCoSim/rumoca fork, `wasm-asset-loader` branch (off `main`).
# `main` already carries:
#   - the `instant::Instant` wasm32 fix that `web-fix` was carrying
#     (std::time::Instant panics on wasm32-unknown-unknown)
#   - `SimStepper` reconstruction of algebraic/output variables via the
#     retained `EliminationResult` (state()/get() now return every
#     variable, not just solver-vector entries).
# `wasm-asset-loader` adds:
#   - `Session::load_source_root_in_memory(...)` so the wasm runtime can
#     hand pre-fetched MSL bytes to the compile session without any fs.
#
rumoca-sim = { workspace = true }
lunco-experiments = { path = "../lunco-experiments" }
rumoca-compile = { workspace = true }
rumoca-phase-parse = { workspace = true }
# Modelica formatter — surfaced as a "Format" toolbar button +
# Ctrl+Shift+F binding. Rewrites the active editor buffer with
# the canonical layout rumoca-tool-fmt produces.
rumoca-tool-fmt = { workspace = true }
# Modelica linter — surfaced into the Diagnostics panel alongside
# parse errors. Wraps `rumoca_tool_lint::lint(source, name, opts)`
# which returns a `Vec<LintMessage>` we map to `LogEntry`s.
rumoca-tool-lint = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1.10"
# rumoca's AST uses `indexmap::IndexMap` for class collections; we
# reference the type directly in `ast_extract` helpers so our
# hot-path extractors can walk the cached AST without any clone.
indexmap = { workspace = true }
futures-lite = "2.3"
crossbeam-channel = { workspace = true }
lunco-api = { path = "../lunco-api", optional = true }
log = "0.4"
uuid = { workspace = true }
# Native file-picker dialogs for Open Folder + Save-As. Uses the
# OS-native picker (GTK3 on Linux, COM on Windows, Cocoa on macOS)
# via rfd's default feature set.
rfd = { workspace = true }

# Tracy profiler is wired via the `tracy` feature above
# (`tracy = ["bevy/trace_tracy"]`). Off by default because tracy-client-sys
# needs a C++ compile that breaks on wasm32 and on Windows MSVC 2019
# (missing `RelationProcessorDie` enumerant in pre-2004 Win10 SDKs).
# Enable with `cargo run --features tracy --bin lunica` when profiling.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# OS clipboard for the code editor's menu / toolbar / right-click Paste
# buttons on native. Ctrl/Cmd+V already works through bevy_egui's own
# arboard plumbing, but the buttons go through
# `ui/wasm_clipboard.rs::request_paste_from_clipboard()` which was
# wasm-only; the native branch reads via arboard so the buttons match
# the keyboard path. Already transitively present via bevy_egui's
# `manage_clipboard` feature — no new compile.
arboard = "3"

# Web-specific: wasm32-unknown-unknown needs JS interop for console output,
# panic hooks, and RNG (std::time is unavailable).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
# `Response`, `Request`, `RequestInit`, `Headers` for the MSL fetcher
# (see `src/msl_remote.rs`); the rest predate this work.
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "CssStyleDeclaration",
    "Window",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Storage",
    # `?example=…` URL parameter parsing in lunica.rs.
    "Location",
    "UrlSearchParams",
    # Web Worker bindings — used by `worker_transport` to offload the
    # blocking compile/step pipeline off the main thread.
    "Worker",
    "WorkerType",
    "WorkerOptions",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    # Clipboard wiring for the wasm code editor.
    # `Navigator` + `Clipboard` for the menu's async paste fallback;
    # `ClipboardEvent` + `DataTransfer` for the synchronous paste-event
    # interception (Ctrl/Cmd+V); `KeyboardEvent` +
    # `AddEventListenerOptions` for the capture-phase keydown
    # interception that lets the browser fire the native paste event
    # at all.  See `ui/wasm_clipboard.rs`.
    "Navigator",
    "Clipboard",
    "ClipboardEvent",
    "DataTransfer",
    "KeyboardEvent",
    "AddEventListenerOptions",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
# Pure-Rust zstd decoder for the MSL bundle. Smaller than the
# `zstd` crate (which uses a C dep) and the encoder side already runs
# on native (see `lunco-assets/src/bin/build_msl_assets.rs`).
ruzstd = "0.7"
# Tar reader to walk the decompressed MSL bundle. The `tar` crate is
# fs-free if you only call `Archive::entries()`; works on wasm.
tar = "0.4"

[lints]
workspace = true
