[package]
name = "lunco-modelica"
version = "0.1.0"
edition = "2021"
description = "Native Modelica simulation integration for LunCoSim using Rumoca"

[features]
# `lunco-api` is on by default so `cargo run --bin lunica --
# --api` Just Works for screenshot-driven debugging. Building without it
# (`cargo build --no-default-features`) drops the axum/tokio web stack,
# which matters for the wasm32 binary.
default = ["lunco-api", "lunco-api/transport-http", "lunco-api/render", "ui", "scripting"]
# The egui Modelica IDE: panels, diagram canvas, plots, docs viewer. OFF ⇒ the
# compile core (ModelicaCorePlugin) builds headless — no egui/winit, no lyon,
# no workbench shell. Consumers that need only the compiler (lunco-usd-sim on a
# server) build with `default-features = false`.
ui = [
    "dep:bevy_egui", "dep:lunco-theme", "dep:lunco-workbench", "dep:lunco-ui",
    "dep:lunco-viz", "dep:lunco-canvas", "dep:egui_plot", "dep:egui_commonmark",
    "dep:egui_extras", "dep:htmd", "dep:lyon_tessellation", "dep:lyon_path",
    "dep:lyon_geom", "lunco-doc-bevy/ui",
    # bevy_egui pulls bevy_render + bevy_window; the lunica WINDOW additionally
    # needs the winit backend (no longer in the workspace bevy default).
    "bevy/bevy_winit", "bevy/bevy_window", "bevy/x11", "bevy/wayland",
    # wasm GPU backend for the egui render pass. Since the workspace made render
    # opt-in (bevy default no longer bundles a wgpu backend), the web build linked
    # bevy_render with NO backend and panicked at startup ("No wgpu backend
    # feature ... was enabled"). WebGL2 matches the sandbox web build; native is
    # unaffected (it uses vulkan/metal/dx12).
    "bevy/webgl2",
]
# Compile the API in. Transport is chosen automatically: the native HTTP
# server comes from `lunco-api/transport-http` (added to `default` above);
# the wasm build (`build_web.sh --features lunco-api`) gets the
# `window.lunco_api` JS bridge automatically via `cfg(target_arch="wasm32")`.
lunco-api = ["dep:lunco-api"]
# Headless Modelica compile/run server: the HTTP API, no `ui`. Build the lunica
# bin with `--no-default-features --features server`. No `lunco-api/render` (the
# server captures no screenshots) and no winit/egui.
server = ["lunco-api", "lunco-api/transport-http"]
# In-app rhai scripting: run/hot-reload scenarios and drive the workbench from
# scripts (used by the rhai-authored lunica tutorials). INDEPENDENT of the API
# feature — `lunco-scripting` self-supplies the transport-free command core, so
# `cmd()` works with no HTTP server. On `default` so the GUI ships with it; drop
# it (`--no-default-features`) for a scripting-free compile-core build.
scripting = ["dep:lunco-scripting", "dep:lunco-tutorial"]
# Opt-in Tracy profiler hook. Off by default because tracy-client-sys needs a
# C++ compile that breaks on wasm32 and on Windows MSVC 2019 (missing
# `RelationProcessorDie` enumerant in pre-2004 Win10 SDKs). Enable with
# `cargo run --features tracy --bin lunica` when you actually want a Tracy
# session.
tracy = ["bevy/trace_tracy"]

# Single source for desktop AND web. `scripts/build_web.sh build lunica`
# builds this bin with `--target wasm32` — the wasm-specific entry /
# window / worker wiring is gated behind `#[cfg(target_arch = "wasm32")]`
# inside `lunica.rs`, mirroring how `sandbox` unifies its desktop+web
# entry. No separate `_web` bin.
[[bin]]
name = "lunica"
path = "src/bin/lunica.rs"
# ONE source, two shapes (like `sandbox`): the default `ui` build is the egui
# workbench window; `--no-default-features --features server` (or `--no-ui` at
# runtime) builds the same bin as a HEADLESS Modelica compile/run server (HTTP
# API, no egui/winit). `lunica.rs` cfg-gates the UI paths, so no required-features.

# Off-thread Modelica worker — wasm32 only. Built as a second wasm bundle
# the main page launches via `new Worker()`. See
# `src/worker_transport.rs` for the JS bridge and
# `scripts/build_web.sh` for the second `wasm-bindgen --target web` pass.
[[bin]]
name = "lunica_worker"
path = "src/bin/lunica_worker.rs"

[[bin]]
name = "msl_indexer"
path = "src/bin/msl_indexer.rs"

[dependencies]
bevy.workspace = true
# The whole egui IDE stack is UI-only. Optional behind `ui` so the Modelica
# COMPILE CORE (ModelicaCorePlugin: channels + worker + .mo loader + dispatch)
# builds headless (`default-features = false`) for a server running cosim — no
# egui→winit. The GUI/lunica build keeps `default = [..., "ui"]`.
bevy_egui = { workspace = true, optional = true }
lunco-assets = { workspace = true }
lunco-core = { path = "../lunco-core" }
lunco-theme = { path = "../lunco-theme", optional = true }
lunco-doc = { path = "../lunco-doc" }
# Core document-lifecycle events; its egui systems come back via `ui` below.
lunco-doc-bevy = { path = "../lunco-doc-bevy", default-features = false }
lunco-twin-journal = { path = "../lunco-twin-journal" }
lunco-settings = { path = "../lunco-settings" }
lunco-workbench = { path = "../lunco-workbench", optional = true }
lunco-web = { workspace = true }
lunco-ui = { path = "../lunco-ui", optional = true }
lunco-viz = { path = "../lunco-viz", optional = true }
lunco-canvas = { path = "../lunco-canvas", optional = true }
lunco-twin = { path = "../lunco-twin", features = ["bevy"] }
lunco-workspace = { path = "../lunco-workspace" }
lunco-storage = { path = "../lunco-storage" }
egui_plot = { workspace = true, optional = true }
# base64url encode/decode for shareable model links (see `model_share.rs`).
# Already resolved transitively (0.22.x) — no new download.
base64 = { workspace = true }
# Docs view (ModelViewMode::Docs): HTML → Markdown → egui render.
# `egui_commonmark` pulls the right `egui` version transitively to
# match bevy_egui 0.40 (→ egui 0.34). Syntax highlighting is enabled
# so `<pre><code>` blocks in Modelica docs render with colour.
egui_commonmark = { version = "0.23", features = ["better_syntax_highlighting"], optional = true }
# `all_loaders` wires up every shipped image source (file://, http://,
# bytes://, raw paths) so images in Documentation HTML render. We add
# a custom `modelica://` loader on top to resolve MSL-internal URIs
# against the on-disk MSL tree.
egui_extras = { version = "0.34", features = ["all_loaders"], optional = true }
# Pure-Rust HTML → Markdown converter. Used once per Documentation
# annotation to normalise into the shape commonmark expects.
htmd = { version = "0.5", optional = true }
# Lock-free publish path from the Modelica worker thread into the UI:
# each running sim owns an `Arc<ArcSwap<SimSnapshot>>` that the worker
# updates after every Step. Plots read via `load()` — no mutex, no
# per-sample work on the main thread. See `sim_stream.rs`.
arc-swap = "1"
# Polygon tessellator with EvenOdd fill-rule support — matches the
# de-facto Modelica standard (Qt's QPainterPath default that OMEdit
# and Dymola rely on). egui's built-in `Shape::convex_polygon` only
# triangulates convex shapes; concave or self-intersecting polygons
# (PartialValve's bowtie, sensor Y-marks, gauge X-shapes) need a real
# tessellator. lyon does this in pure Rust with vertex/index buffer
# output that drops straight into `egui::Mesh`. ~150 KB compiled.
lyon_tessellation = { version = "1", optional = true }
lyon_path = { version = "1", optional = true }
lyon_geom = { version = "1", optional = true }
# Direct rayon dependency so `lunica` can configure the
# global rayon pool BEFORE rumoca's `parse_files_parallel` initialises
# it with `num_cpus - 1` threads. With rumoca's default, every
# parse-on-Add saturates all-but-one core for ~1.5 s and starves
# bevy_render — the `Last` schedule blocks waiting for the previous
# frame's render. Capping rayon at 2 threads keeps cores free for
# rendering without losing meaningful parse speed (rumoca's parallel
# benefit is for batch parses, not the per-Add single-file path).
rayon = { workspace = true }
# Wasm-safe replacement for `std::time::Instant`. On native it's an alias
# for `std::time::Instant`; on wasm32 it's backed by `performance.now()`.
# Required because `std::time::Instant::now()` panics with
# "time not implemented on this platform" on wasm32-unknown-unknown.
web-time = { workspace = true }
# Pre-parsed MSL bundle deserialiser. Same encoding as rumoca's
# on-disk artifact cache — the wasm fetcher decodes a Vec of
# (uri, StoredDefinition) shipped at build time, skipping a ~27-min
# per-file parse on the page.
bincode = { workspace = true }
# Raster decoders used by egui_extras' `all_loaders`. Only the formats
# actually present in MSL Resources/Images are enabled to keep the
# compile surface small.
image = { workspace = true }
# LunCoSim/rumoca fork, `wasm-asset-loader` branch (off `main`).
# `main` already carries:
#   - the `instant::Instant` wasm32 fix that `web-fix` was carrying
#     (std::time::Instant panics on wasm32-unknown-unknown)
#   - `SimStepper` reconstruction of algebraic/output variables via the
#     retained `EliminationResult` (state()/get() now return every
#     variable, not just solver-vector entries).
# `wasm-asset-loader` adds:
#   - `Session::load_source_root_in_memory(...)` so the wasm runtime can
#     hand pre-fetched MSL bytes to the compile session without any fs.
#
rumoca-sim = { workspace = true }
lunco-experiments = { path = "../lunco-experiments" }
rumoca-compile = { workspace = true }
rumoca-phase-parse = { workspace = true }
# Modelica formatter — surfaced as a "Format" toolbar button +
# Ctrl+Shift+F binding. Rewrites the active editor buffer with
# the canonical layout rumoca-tool-fmt produces.
rumoca-tool-fmt = { workspace = true }
# Modelica linter — surfaced into the Diagnostics panel alongside
# parse errors. Wraps `rumoca_tool_lint::lint(source, name, opts)`
# which returns a `Vec<LintMessage>` we map to `LogEntry`s.
rumoca-tool-lint = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1.10"
# rumoca's AST uses `indexmap::IndexMap` for class collections; we
# reference the type directly in `ast_extract` helpers so our
# hot-path extractors can walk the cached AST without any clone.
indexmap = { workspace = true }
futures-lite = "2.3"
crossbeam-channel = { workspace = true }
# `default-features = false`: the `lunco-api` (native) and `web` features pick
# the transport — `transport-http` vs. `transport-wasm`.
lunco-api = { path = "../lunco-api", optional = true, default-features = false }
# In-app rhai scripting runtime (RunScenario/hot-reload + the `cmd()`/prelude
# world-bridge). Optional behind the `scripting` feature. Its default `rhai`
# backend is wasm-clean, and it pulls `lunco-api` only default-features=false
# (the transport-free command core) — no HTTP transport, keeping scripting
# independent of the API server.
lunco-scripting = { path = "../lunco-scripting", optional = true }
# The unified tutorial launcher (registry + 🎓 menu + panel + StartTutorial +
# onboarding + F1). Lunica registers its lessons into it; the launcher runs each
# as a rhai scenario. Optional behind `scripting` (it needs `RunScenario`).
lunco-tutorial = { path = "../lunco-tutorial", optional = true }
# PERF-CRITICAL: compile-time static max level for the `log` facade.
#
# Why: parol_runtime (rumoca's parser engine) calls `log::trace!` in its
# hottest loops — e.g. it Display-formats the WHOLE token stream on every
# lookahead and every parse-tree push. Those calls are ~free when nobody
# enables trace, BUT the app installs Bevy's `LogPlugin`, whose tracing-log
# bridge forces the `log` facade's max level to TRACE (so all log records
# reach `tracing` for filtering). That makes every `log::trace!` CONSTRUCT
# and format its record before tracing drops it at info-level — the cost is
# paid millions of times. Measured: a cold MSL parse went from <2 s
# (standalone, no logger) to 5+ minutes in-app. Same parser, same machine —
# the only difference was the installed logger. (Repro: set log max level to
# TRACE in a standalone bin → identical blow-up.) Per-target filtering can't
# help: the record is built before any per-crate filter runs.
#
# These features bake `log`'s STATIC_MAX_LEVEL at COMPILE time, so the
# affected macros become no-ops with zero runtime cost regardless of what
# the logger sets at runtime. Features are additive and unify across the
# whole dependency graph, so this also neutralises parol_runtime's trace.
#
# What this drops:  `log::trace!` (dev + release), `log::debug!` (release only).
# What this KEEPS:  `log::info!/warn!/error!` everywhere, `log::debug!` in dev,
#                   and ALL `tracing`/`bevy::log` macros (separate crate,
#                   unaffected) at every level. So normal logging is intact;
#                   only the trace flood (≈ exclusively parol's) is removed.
# To keep `log::debug!` in release too, swap `release_max_level_info` →
# `release_max_level_debug` (still kills the trace flood).
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
uuid = { workspace = true }

# Tracy profiler is wired via the `tracy` feature above
# (`tracy = ["bevy/trace_tracy"]`). Off by default because tracy-client-sys
# needs a C++ compile that breaks on wasm32 and on Windows MSVC 2019
# (missing `RelationProcessorDie` enumerant in pre-2004 Win10 SDKs).
# Enable with `cargo run --features tracy --bin lunica` when profiling.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# OS clipboard for the code editor's menu / toolbar / right-click Paste
# buttons on native. Ctrl/Cmd+V already works through bevy_egui's own
# arboard plumbing, but the buttons go through
# `ui/wasm_clipboard.rs::request_paste_from_clipboard()` which was
# wasm-only; the native branch reads via arboard so the buttons match
# the keyboard path. Already transitively present via bevy_egui's
# `manage_clipboard` feature — no new compile.
arboard = "3"

# zstd codec for the native pre-parsed MSL bundle (`.cache/msl/parsed-msl.bin`).
# The bundle is now zstd-compressed bincode (~10× smaller on disk than the raw
# bincode it replaced — matters because the cache is large and disk has filled
# up before). C-backed, but native already links it via `build_msl_assets`, and
# it's target-gated so wasm keeps using the pure-Rust `ruzstd` decoder below.
zstd = { workspace = true }

# Web-specific: wasm32-unknown-unknown needs JS interop for console output,
# panic hooks, and RNG (std::time is unavailable).
[target.'cfg(target_arch = "wasm32")'.dependencies]
# The generic Web Worker pool (spawn / boot handshake / byte + Transferable post
# / crash respawn), shared with the DEM bake worker. `worker_transport` composes
# it and keeps the Modelica-specific MSL/run state on top.
lunco-worker-transport = { path = "../lunco-worker-transport" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
# bevy_math → rand pulls getrandom 0.3, which on wasm needs an explicit backend.
# The lunica_worker bundle builds out of this crate, so the browser-crypto
# (`wasm_js`) feature must be enabled here too; build_web.sh sets the matching
# `--cfg getrandom_backend="wasm_js"` (cfg + feature are both required).
getrandom = { version = "0.3", features = ["wasm_js"] }
# `Response`, `Request`, `RequestInit`, `Headers` for the MSL fetcher
# (see `src/msl_remote.rs`); the rest predate this work.
web-sys = { workspace = true, features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "CssStyleDeclaration",
    "Window",
    "Cache",
    "CacheStorage",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Storage",
    # `?example=…` URL parameter parsing in lunica.rs.
    "Location",
    "UrlSearchParams",
    # Web Worker bindings — used by `worker_transport` to offload the
    # blocking compile/step pipeline off the main thread.
    "Worker",
    "WorkerType",
    "WorkerOptions",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    # `ErrorEvent` for the worker `onerror` crash handler — lets a worker
    # OOM/panic surface as a graceful run failure + respawn instead of
    # hanging the main thread (see `worker_transport::handle_worker_error`).
    "ErrorEvent",
    # Clipboard wiring for the wasm code editor.
    # `Navigator` + `Clipboard` for the menu's async paste fallback;
    # `ClipboardEvent` + `DataTransfer` for the synchronous paste-event
    # interception (Ctrl/Cmd+V); `KeyboardEvent` +
    # `AddEventListenerOptions` for the capture-phase keydown
    # interception that lets the browser fire the native paste event
    # at all.  See `ui/wasm_clipboard.rs`.
    "Navigator",
    "Clipboard",
    "ClipboardEvent",
    "DataTransfer",
    "KeyboardEvent",
    "AddEventListenerOptions",
] }
js-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
# Pure-Rust zstd decoder for the MSL bundle. Smaller than the
# `zstd` crate (which uses a C dep) and the encoder side already runs
# on native (see `lunco-assets/src/bin/build_msl_assets.rs`).
ruzstd = "0.7"
# Tar reader to walk the decompressed MSL bundle. The `tar` crate is
# fs-free if you only call `Archive::entries()`; works on wasm.
tar = { workspace = true }

[lints]
workspace = true
