[package]
name = "lunco-networking"
version = "0.1.0-dev"
edition = "2021"
description = "Networking layer for LunCoSim — thin lightyear (WebTransport) adapter over the always-on wire substrate in lunco-api/lunco-core."

[[bin]]
name = "net_smoke"
path = "src/bin/net_smoke.rs"
required-features = ["networking"]

[features]
default = []
# Turns the crate from a no-op facade into the real lightyear WebTransport
# adapter. Gated per D7 (substrate is always-on; only the wire is optional).
networking = ["dep:lightyear", "dep:serde", "dep:serde_json", "dep:bincode"]
# Client-prediction diagnostics (render-jitter / velocity / correction census in
# `diagnostics.rs`). OFF by default → not compiled into normal/shipping builds.
# Build with it when chasing netcode jitter; once compiled it's active unless
# silenced with `LUNCO_NET_DIAG=0`. Implies `networking` (pointless without the wire).
net-diag = ["networking"]

[dependencies]
bevy = { workspace = true }
lunco-core = { path = "../lunco-core" }
# `default-features = false`: we only use the registry/executor types + plugin,
# never the native `transport-http` server (axum/tokio/mio — wasm-incompatible).
# Native builds still get transport-http via lunco-client's own default features.
lunco-api = { path = "../lunco-api", default-features = false }
lunco-mobility = { path = "../lunco-mobility" }
# Wire substrate needs avatar/sandbox-edit COMPONENTS + commands, never their
# egui editor UI — `default-features = false` keeps the networked headless server
# (and this crate) egui/winit-free.
lunco-avatar = { path = "../lunco-avatar", default-features = false }
lunco-sandbox-edit = { path = "../lunco-sandbox-edit", default-features = false }
# Read by the wire's `gather_snapshot`: avian velocity (LinearVelocity/
# AngularVelocity) for client-side prediction, big_space `CellCoord` so
# replication carries the integer cell alongside the f64 absolute position.
avian3d = { workspace = true }
big_space = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
# Binary wire codec for the snapshot/envelope hot path (replaces serde_json there —
# ~2x smaller, no field names). serde_json stays for the Reflect command payload.
bincode = { version = "1.3", optional = true }
# URL-dialing WebTransport client IO (`wt_client`): lets the browser/native connect by
# HOSTNAME (`https://sandbox.lunco.space:5888`) so a real CA cert validates with no
# digest — lightyear's built-in IO only dials `https://{ip}`.
# `dangerous-configuration` exposes wtransport's `with_no_cert_validation`, used
# ONLY for direct bare-IP native connections (a self-signed server over LAN/dev,
# no CA cert) — see `native_client_config` in wt_client.rs. Hostname connections
# always use full CA validation; the insecure path never applies to them.
aeronet_webtransport = { version = "0.19", features = ["client", "dangerous-configuration"] }
lightyear_aeronet = { version = "0.26.4", default-features = false }


# Native (desktop / dedicated server): full client+server WebTransport.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
lightyear = { version = "0.26.4", default-features = false, optional = true, features = [
  "client",
  "server",
  "netcode",
  "webtransport",
  "webtransport_self_signed",
  "webtransport_dangerous_configuration",
] }
# Host TLS identity loading (production certbot cert via env paths). File reads
# route through lunco-storage (raw `std::fs` is clippy-banned workspace-wide);
# rustls-pemfile turns the PEM into DER for wtransport's sync `Identity::new`.
lunco-storage = { path = "../lunco-storage" }
wtransport = "0.6.1"
rustls-pemfile = "2"

# Browser (wasm): client-only WebTransport. Cert digest comes from the URL hash.
[target.'cfg(target_family = "wasm")'.dependencies]
lightyear = { version = "0.26.4", default-features = false, optional = true, features = [
  "client",
  "netcode",
  "webtransport",
  "webtransport_self_signed",
] }
# Non-optional: `NetworkMode::from_url` (query parse + `performance.now()` for a
# per-tab client id) and the client adapter's cert-digest read both need it, and
# the crate is only ever compiled when the `networking` feature pulls it in.
web-sys = { version = "0.3", features = ["Window", "Location", "Performance"] }
# lightyear's netcode pulls getrandom 0.2 transitively; on wasm it needs the JS
# backend (`crypto.getRandomValues`) or it `compile_error!`s. We don't use it
# directly — this entry exists only to turn the feature on via unification.
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true
