[package]
name = "lunco-networking"
version = "0.1.0-dev"
edition = "2021"
description = "Networking layer for LunCoSim — thin lightyear (WebTransport) adapter over the always-on wire substrate in lunco-api/lunco-core."

[[bin]]
name = "net_smoke"
path = "src/bin/net_smoke.rs"
required-features = ["networking"]

[features]
# Default = headless-clean: no egui, no workbench, no networking wire. The
# GUI-free `lunco-sandbox-server` depends on this crate (transitively) WITHOUT
# the `ui` feature, so default MUST NOT pull egui/workbench (CQ-601). The GUI
# `lunco-sandbox` opts into `ui` explicitly.
default = []
# Turns the crate from a no-op facade into the real lightyear WebTransport
# adapter. Gated per D7 (substrate is always-on; only the wire is optional).
networking = ["dep:lightyear", "dep:serde", "dep:serde_json", "dep:bincode"]
# Client-prediction diagnostics (render-jitter / velocity / correction census in
# `diagnostics.rs`). OFF by default → not compiled into normal/shipping builds.
# Build with it when chasing netcode jitter; once compiled it's active unless
# silenced with `LUNCO_NET_DIAG=0`. Implies `networking` (pointless without the wire).
net-diag = ["networking"]
# Layer-4 in-sim UI (`mod ui`): the egui presence-cursor / tutorial overlays +
# the Network/settings menu bridge. Pulls `bevy_egui` (otherwise NOT linked) and
# the workbench. Implies `networking` because the bridge re-dispatches the typed
# JoinServer/LeaveServer commands from `client`/`sync`. OFF for headless servers.
ui = ["networking", "dep:bevy_egui", "workbench"]
# Perspective/layout sync against the workbench (`sync.rs` ActivatePerspective +
# WorkbenchLayout reads). UI-adjacent but no egui itself; pulled in by `ui`.
workbench = ["dep:lunco-workbench"]

[dependencies]
bevy = { workspace = true }
lunco-workbench = { path = "../lunco-workbench", optional = true }
lunco-core = { path = "../lunco-core" }
lunco-obstacle-field = { path = "../lunco-obstacle-field" }
# `default-features = false`: we only use the registry/executor types + plugin,
# never the native `transport-http` server (axum/tokio/mio — wasm-incompatible).
# Native builds still get transport-http via lunco-client's own default features.
lunco-api = { path = "../lunco-api", default-features = false }
lunco-mobility = { path = "../lunco-mobility" }
# Wire substrate needs avatar/sandbox-edit COMPONENTS + commands, never their
# egui editor UI — `default-features = false` keeps the networked headless server
# (and this crate) egui/winit-free.
lunco-avatar = { path = "../lunco-avatar", default-features = false }
# `default-features = false`: we read only `CelestialReferenceFrame` (the
# always-compiled registry component) for snapshot grid parenting — never
# celestial's egui inspector (`ui` feature). Keeps the headless server egui-free.
lunco-celestial = { path = "../lunco-celestial", default-features = false }
lunco-sandbox-edit = { path = "../lunco-sandbox-edit", default-features = false }
# `default-features = false`: we use only the egui-free `Presence`/`UserId`/
# `PresenceInfo` document-lifecycle types, never doc-bevy's `ui` editor-intent
# systems. Default features here would turn on `lunco-doc-bevy/ui` (→ bevy_egui)
# for the WHOLE build via feature unification — the real CQ-601 headless leak.
lunco-doc-bevy = { path = "../lunco-doc-bevy", default-features = false }
lunco-doc = { path = "../lunco-doc" }
lunco-settings = { path = "../lunco-settings" }
lunco-workspace = { path = "../lunco-workspace" }
lunco-controller = { path = "../lunco-controller" }
# Optional: only the Layer-4 `mod ui` (egui overlays) uses it, behind the `ui`
# feature. Headless servers never link egui.
bevy_egui = { workspace = true, optional = true }
leafwing-input-manager = { workspace = true }
# Read by the wire's `gather_snapshot`: avian velocity (LinearVelocity/
# AngularVelocity) for client-side prediction, big_space `CellCoord` so
# replication carries the integer cell alongside the f64 absolute position.
avian3d = { workspace = true }
big_space = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
# Binary wire codec for the snapshot/envelope hot path (replaces serde_json there —
# ~2x smaller, no field names). serde_json stays for the Reflect command payload.
bincode = { version = "1.3", optional = true }
# URL-dialing WebTransport client IO (`wt_client`): lets the browser/native connect by
# HOSTNAME (`https://sandbox.lunco.space:5888`) so a real CA cert validates with no
# digest — lightyear's built-in IO only dials `https://{ip}`.
# `dangerous-configuration` exposes wtransport's `with_no_cert_validation`, used
# ONLY for direct bare-IP native connections (a self-signed server over LAN/dev,
# no CA cert) — see `native_client_config` in wt_client.rs. Hostname connections
# always use full CA validation; the insecure path never applies to them.
aeronet_webtransport = { version = "0.19", features = ["client", "dangerous-configuration"] }
lightyear_aeronet = { version = "0.26.4", default-features = false }


# Native (desktop / dedicated server): full client+server WebTransport.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
lightyear = { version = "0.26.4", default-features = false, optional = true, features = [
  "client",
  "server",
  "netcode",
  "webtransport",
  "webtransport_self_signed",
  "webtransport_dangerous_configuration",
] }
# Host TLS identity loading (production certbot cert via env paths). File reads
# route through lunco-storage (raw `std::fs` is clippy-banned workspace-wide);
# rustls-pemfile turns the PEM into DER for wtransport's sync `Identity::new`.
lunco-storage = { path = "../lunco-storage" }
wtransport = "0.6.1"
rustls-pemfile = "2"

# Browser (wasm): client-only WebTransport. Cert digest comes from the URL hash.
[target.'cfg(target_family = "wasm")'.dependencies]
lightyear = { version = "0.26.4", default-features = false, optional = true, features = [
  "client",
  "netcode",
  "webtransport",
  "webtransport_self_signed",
] }
# Non-optional: `NetworkMode::from_url` (query parse + `performance.now()` for a
# per-tab client id) and the client adapter's cert-digest read both need it, and
# the crate is only ever compiled when the `networking` feature pulls it in.
web-sys = { version = "0.3", features = ["Window", "Location", "Performance"] }
# lightyear's netcode pulls getrandom 0.2 transitively; on wasm it needs the JS
# backend (`crypto.getRandomValues`) or it `compile_error!`s. We don't use it
# directly — this entry exists only to turn the feature on via unification.
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true
